--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -4,7 +4,7 @@
     <title>Board Game Olympics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="resources/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -67,7 +67,7 @@
                 </table>
               </div>
               <div class="col-md-4">
-                <img src="resources/img/small_world.jpg" class="img-rounded img-responsive">
+                <img src="/static/img/small_world.jpg" class="img-rounded img-responsive">
               </div>
             </div>
             <div class="page-header" style="margin-top:0px">
@@ -93,8 +93,8 @@
     
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="resources/js/libs/jquery/jquery.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="resources/js/libs/bootstrap/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
