--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -44,7 +43,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Board Game Olympics</a>
+        <a class="navbar-brand" href="index.html">Board Game Olympics</a>
       </div>
     
       <!-- Collect the nav links, forms, and other content for toggling -->
