--- a/app/static/templates/game_detail.html
+++ b/app/static/templates/game_detail.html
@@ -20,7 +20,7 @@
     </table>
   </div>
   <div class="col-md-4">
-    <img src="<%= icon %>" class="img-rounded img-responsive">
+    <img src="<%= icon %>" style="margin-top:20px" class="img-rounded img-responsive">
   </div>
 </div>
 <div class="page-header" style="margin-top:0px">
