--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,14 @@
     <script type="text/javascript" src="static/js/app/views/game_list.js"></script>
     <script type="text/javascript" src="static/js/app/views/game_detail.js"></script>
 
+    <script type="text/javascript" src="static/js/app/models/country_detail.js"></script>
+    <script type="text/javascript" src="static/js/app/models/country_list.js"></script>
+    <script type="text/javascript" src="static/js/app/views/country_list.js"></script>
+<!--     <script type="text/javascript" src="static/js/app/views/country_detail.js"></script> -->
+
+    <script type="text/javascript" src="static/js/app/models/scoreboard.js"></script>
+    <script type="text/javascript" src="static/js/app/views/scoreboard.js"></script>
+
     <script type="text/javascript" src="static/js/router.js"></script>
     <script type="text/javascript" src="static/js/app.js"></script>
   </head>
@@ -50,8 +58,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="#games/1">Games</a></li>
-          <li><a href="index-country.html">Countries</a></li>
-          <li><a href="index-scoreboard.html">Scoreboard</a></li>
+          <li><a href="#countries/1">Countries</a></li>
+          <li><a href="#scoreboard">Scoreboard</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Submit Result</a></li>
