Implemented rank and percentage on country pages.

--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -53,17 +53,17 @@
       </div>
       <div class="row">
         <div class="col-md-1">
-          <span class="h4">3rd</span>
+          <span class="h4"><%= ranking %></span>
         </div>
         <div class="col-md-9">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage %>%;">
               <span class="sr-only">80% Complete</span>
             </div>
           </div>
         </div>
         <div class="col-md-2">
-          <span class="h4">57 points</span>
+          <span class="h4"><%= score %> points</span>
         </div>
       </div>
 
@@ -105,7 +105,7 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-2">
-                  <img src="resources/img/small_world.jpg" class="img-rounded img-responsive">
+                  <img src="static/img/small_world.jpg" class="img-rounded img-responsive">
                 </div>
                 <div class="col-md-10">
                   <table class="table table-condensed" style="margin-bottom:0px">
@@ -169,7 +169,7 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-2">
-                  <img src="resources/img/dominion.jpg" class="img-rounded img-responsive">
+                  <img src="static/img/dominion.jpg" class="img-rounded img-responsive">
                 </div>
                 <div class="col-md-10">
                   <table class="table table-condensed" style="margin-bottom:0px">
@@ -233,7 +233,7 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-2">
-                  <img src="resources/img/agricola.jpg" class="img-rounded img-responsive">
+                  <img src="static/img/agricola.jpg" class="img-rounded img-responsive">
                 </div>
                 <div class="col-md-10">
                   <table class="table table-condensed" style="margin-bottom:0px">
