Changed ranking html on country view.

--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -51,7 +51,7 @@
       <div class="page-header" style="margin-top:0px">
         <h3>Ranking</h3>
       </div>
-      <div class="row">
+      <div class="row hidden-xs">
         <div class="col-md-1">
           <span class="h4"><%= ranking %></span>
         </div>
@@ -67,6 +67,24 @@
         </div>
       </div>
 
+      <div class="row hidden-sm hidden-md hidden-lg">
+        <div class="col-md-4">
+          <span class="h4"><%= ranking %></span>
+        </div>
+        <div class="col-md-8">
+          <span class="h4"><%= score %> points</span>
+        </div>
+      </div>
+      <div class="row hidden-sm hidden-md hidden-lg">
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage %>%;">
+              <span class="sr-only">80% Complete</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <div class="page-header" style="margin-top:0px">
         <h3>Description</h3>
       </div>
