--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -103,13 +103,14 @@
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                 <div class="row">
                   <div class="col-md-8">
-                    <span>Small World</span>
+                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>1<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>12</span>
+                    <span>Betrayal at House on the Hill</span>
                   </div>
-                  <div class="col-md-2">
+                  <div class="col-md-2 hidden-xs">
                     <span class="glyphicon glyphicon-tower" style="padding-right:25px"></span>
                     <span>1</span>
                   </div>
-                  <div class="col-md-2">
+                  <div class="col-md-2 hidden-xs">
                     <span class="glyphicon glyphicon-certificate" style="padding-right:25px"></span>
                     <span>12</span>
                   </div>
@@ -119,9 +120,9 @@
           </div>
           <div id="collapseOne" class="panel-collapse collapse">
             <div class="panel-body">
-              <div class="row">
+              <div class="row hidden-xs">
                 <div class="col-md-2">
-                  <img src="static/img/small_world.jpg" class="img-rounded img-responsive">
+                  <img src="static/img/small_world.jpg" class="img-rounded img-responsive hidden-xs">
                 </div>
                 <div class="col-md-10">
                   <table class="table table-condensed" style="margin-bottom:0px">
@@ -158,9 +159,221 @@
                   </table>
                 </div>
               </div>
+              <table class="table table-condensed hidden-sm hidden-md hidden-lg" style="margin-bottom:0px;">
+                <tr>
+                  <th class="col-md-2">Place</th>
+                  <th class="col-md-7">Country</th>
+                  <th class="col-md-3">Representative</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Buy N Large</td>
+                  <td>Alan You</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Aperture Science</td>
+                  <td>Derek Alfsen</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>The Guild of Malicious Intent</td>
+                  <td>Josh Cohen</td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>Globex Corporation</td>
+                  <td>Brad Garland</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                <div class="row">
+                  <div class="col-md-8">
+                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>1<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>12</span>
+                    <span>7 Wonders</span>
+                  </div>
+                  <div class="col-md-2 hidden-xs">
+                    <span class="glyphicon glyphicon-tower" style="padding-right:25px"></span>
+                    <span>1</span>
+                  </div>
+                  <div class="col-md-2 hidden-xs">
+                    <span class="glyphicon glyphicon-certificate" style="padding-right:25px"></span>
+                    <span>12</span>
+                  </div>
+                </div>
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse">
+            <div class="panel-body">
+              <div class="row hidden-xs">
+                <div class="col-md-2">
+                  <img src="static/img/small_world.jpg" class="img-rounded img-responsive hidden-xs">
+                </div>
+                <div class="col-md-10">
+                  <table class="table table-condensed" style="margin-bottom:0px">
+                    <tr>
+                      <th class="col-md-1">Place</th>
+                      <th class="col-md-4">Country</th>
+                      <th class="col-md-4">Representative</th>
+                      <th class="col-md-3">Points</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Buy N Large</td>
+                      <td>Alan You</td>
+                      <td>12</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Aperture Science</td>
+                      <td>Derek Alfsen</td>
+                      <td>9</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>Shinra Corporation</td>
+                      <td>Shane Fry</td>
+                      <td>6</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Globex Corporation</td>
+                      <td>Brad Garland</td>
+                      <td>3</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <table class="table table-condensed hidden-sm hidden-md hidden-lg" style="margin-bottom:0px;">
+                <tr>
+                  <th class="col-md-2">Place</th>
+                  <th class="col-md-7">Country</th>
+                  <th class="col-md-3">Representative</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Buy N Large</td>
+                  <td>Alan You</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Aperture Science</td>
+                  <td>Derek Alfsen</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>The Guild of Malicious Intent</td>
+                  <td>Josh Cohen</td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>Globex Corporation</td>
+                  <td>Brad Garland</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                <div class="row">
+                  <div class="col-md-8">
+                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>1<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>12</span>
+                    <span>Dominion</span>
+                  </div>
+                  <div class="col-md-2 hidden-xs">
+                    <span class="glyphicon glyphicon-tower" style="padding-right:25px"></span>
+                    <span>1</span>
+                  </div>
+                  <div class="col-md-2 hidden-xs">
+                    <span class="glyphicon glyphicon-certificate" style="padding-right:25px"></span>
+                    <span>12</span>
+                  </div>
+                </div>
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse">
+            <div class="panel-body">
+              <div class="row hidden-xs">
+                <div class="col-md-2">
+                  <img src="static/img/small_world.jpg" class="img-rounded img-responsive hidden-xs">
+                </div>
+                <div class="col-md-10">
+                  <table class="table table-condensed" style="margin-bottom:0px">
+                    <tr>
+                      <th class="col-md-1">Place</th>
+                      <th class="col-md-4">Country</th>
+                      <th class="col-md-4">Representative</th>
+                      <th class="col-md-3">Points</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Buy N Large</td>
+                      <td>Alan You</td>
+                      <td>12</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Aperture Science</td>
+                      <td>Derek Alfsen</td>
+                      <td>9</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>Shinra Corporation</td>
+                      <td>Shane Fry</td>
+                      <td>6</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Globex Corporation</td>
+                      <td>Brad Garland</td>
+                      <td>3</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <table class="table table-condensed hidden-sm hidden-md hidden-lg" style="margin-bottom:0px;">
+                <tr>
+                  <th class="col-md-2">Place</th>
+                  <th class="col-md-7">Country</th>
+                  <th class="col-md-3">Representative</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Buy N Large</td>
+                  <td>Alan You</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Aperture Science</td>
+                  <td>Derek Alfsen</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>The Guild of Malicious Intent</td>
+                  <td>Josh Cohen</td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>Globex Corporation</td>
+                  <td>Brad Garland</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+<!--
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
@@ -289,6 +502,7 @@
             </div>
           </div>
         </div>
+-->
       </div><br><br>
     </div>
     <div class="col-md-4">
