Testing speed of page load.

--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -195,7 +195,7 @@
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                 <div class="row">
                   <div class="col-md-8">
-                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>1<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>12</span>
+                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>3<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>6</span>
                     <span>7 Wonders</span>
                   </div>
                   <div class="col-md-2 hidden-xs">
@@ -255,27 +255,27 @@
                 <tr>
                   <th class="col-md-2">Place</th>
                   <th class="col-md-7">Country</th>
-                  <th class="col-md-3">Representative</th>
+                  <th class="col-md-3">Points</th>
                 </tr>
                 <tr>
                   <td>1</td>
                   <td>Buy N Large</td>
-                  <td>Alan You</td>
+                  <td>12</td>
                 </tr>
                 <tr>
                   <td>2</td>
                   <td>Aperture Science</td>
-                  <td>Derek Alfsen</td>
+                  <td>8</td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>The Guild of Malicious Intent</td>
-                  <td>Josh Cohen</td>
+                  <td>6</td>
                 </tr>
                 <tr>
                   <td>4</td>
                   <td>Globex Corporation</td>
-                  <td>Brad Garland</td>
+                  <td>0</td>
                 </tr>
               </table>
             </div>
@@ -287,7 +287,7 @@
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                 <div class="row">
                   <div class="col-md-8">
-                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>1<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>12</span>
+                    <span class="pull-right hidden-sm hidden-md hidden-lg"><span class="glyphicon glyphicon-tower" style="padding-right:20px"></span>2<span class="glyphicon glyphicon-certificate" style="padding-left:10px; padding-right:20px"></span>9</span>
                     <span>Dominion</span>
                   </div>
                   <div class="col-md-2 hidden-xs">
