--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="static/js/app/collections/games.js"></script>
     <script type="text/javascript" src="static/js/app/collections/countries.js"></script>
     <script type="text/javascript" src="static/js/app/collections/standings.js"></script>
+    <script type="text/javascript" src="static/js/app/collections/matches.js"></script>
 
     <script type="text/javascript" src="static/js/app/views/landing.js"></script>
     <script type="text/javascript" src="static/js/app/views/games.js"></script>
