Implemented view for empty game log on country view.

--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -97,7 +97,8 @@
         <h3>Game Log</h3>
       </div>
       <% if (game_log.length == 0) { %>
-      <div class="well">
+      <div class="well" style="text-align:center;">
+        <span>No games played.</span>
       </div>
       <% } else { %>
       <div class="panel-group" id="accordion">
